fix: weird h1 element being too big is now fixed

--- a/style.css
+++ b/style.css
@@ -41,11 +41,14 @@ h1 {
     .div4 { grid-area: 2 / 1 / 3 / 2; }
     
 .center {
-    display: flex;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+
+    /* display: flex;
     align-items: center;
     justify-content: center;
-    min-height: 100%;
-    margin: 0;
+    min-height: 100%; */
 }
 
 
@@ -71,7 +74,7 @@ h1::before {
   width: 600px;
   margin-left: -300px;
   margin-top: -220px;
-  height: 600px;
+  height: 100%;
   background: radial-gradient(ellipse closest-side, #444);
   z-index: -1;
 }
